--- a/src/pages/home/components/Header/header.hbs
+++ b/src/pages/home/components/Header/header.hbs
@@ -1,7 +1,9 @@
 <header class="header">
   <div class="header__container">
     <div class="content">
-      <div class="menu_burger"></div>
+      <div class="menu_burger">
+        <img src="assets/images/burger.svg" alt="" />
+      </div>
       <div class="logo">MONDAY</div>
       <div class="lang_switcher">
         <img
@@ -37,9 +39,9 @@
           <img src="assets/images/lovely.svg" alt="" class="item_icon" />
           <div class="item_text">Favorites</div>
         </div>
-        <div class="menu_item">
+        {{! <div class="menu_item">
           <div class="item_text">Orders</div>
-        </div>
+        </div> }}
       </nav>
       <nav class="options_menu">
         <div class="menu_item">
@@ -189,6 +191,7 @@
         <div class="horizonal_item">Scripts & Bots</div>
       </div>
       <div class="dropdown_menu">
+        <span class="dropdown_menu_line"></span>
         <div class="dropdown_title">All Services</div>
         <img src="assets/images/arrow-down.svg" alt="" class="dropdown_arrow" />
       </div>
